name:            punycode
version:         1.0
license:         BSD3
license-file:    LICENSE
author:          Myles C. Maxfield <myles.maxfield@gmail.com>
maintainer:      None
synopsis:        DEPRECATED: Use Data.Encoding.BootString from the 'encoding' package.
description:     DEPRECATED: Use Data.Encoding.BootString from the 'encoding' package.
category:        Text, Web
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/litherum/punycode

library
    build-depends: base         >= 4       && < 5
                 , bytestring
                 , cereal
                 , mtl
    exposed-modules: Data.Text.Punycode
    other-modules:   Data.Text.Punycode.Encode
                   , Data.Text.Punycode.Decode
                   , Data.Text.Punycode.Shared
    ghc-options:     -Wall

Test-Suite test-punycode
    type: exitcode-stdio-1.0
    main-is: Test/Main.hs
    build-depends: base >= 4 && < 5
                 , bytestring
                 , cereal
                 , mtl
                 , HUnit
                 , QuickCheck
                 , encoding
                 , binary

source-repository head
  type:     git
  location: git://github.com/litherum/punycode.git
